# pptx-builder

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  gameplan.md  make_ppt.py  pyproject.toml  requirements.txt  test_make_ppt.py  test_pptx_builder.py
.github/workflows/: test.yml
docs/: MAN_PAGE_USAGE.md  README.md  RELEASE_NOTES_v0.1.0.md  pptx-builder.1
private/: GRADIO_TUTORIAL.md  RELEASE_READINESS.md  SETUP_COMPLETE.md  pre-release.md
simple/: README.md  make_ppt.py  requirements.txt
src/pptx_builder/: __init__.py  cli.py  core.py  web.py
