[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sageframe-pptx-builder"
version = "0.1.0"
description = "A local-first CLI (and optional Web UI) for converting PDFs and image folders into clean, DPI-controlled PowerPoint slides"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Andrew Marcus", email = "andrew@sageframe.com"}
]
keywords = ["powerpoint", "pdf", "converter", "pptx", "slides", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Multimedia :: Graphics :: Presentation",
]

dependencies = [
    "python-pptx>=0.6.21",
    "Pillow>=10.0.0",
    "PyMuPDF>=1.23.0",
    "pdf2image>=1.16.0",
    "pillow-heif>=0.13.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
web = [
    "gradio>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/sageframe-no-kaji/pptx-builder"
Repository = "https://github.com/sageframe-no-kaji/pptx-builder"
Issues = "https://github.com/sageframe-no-kaji/pptx-builder/issues"

[project.scripts]
pptx-builder = "pptx_builder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
addopts = "-v --strict-markers --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
